--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,13 +25,15 @@
         
         <td><%= link_to @bookfind.title %></td>
         
+        <td><%= @bookfind.body %></td>
+        
         <td><% if @bookfind.user == current_user %>
-         <%= link_to "edit", edit_book_path(@bookfind.id), class:"btn-sm btn-success" %>
+         <%= link_to "Edit", edit_book_path(@bookfind.id), class:"btn-sm btn-success" %>
          <% end %>
          </td>
          
          <td><% if @bookfind.user == current_user %>
-         <%= link_to "destroy", book_path(@bookfind), class:"btn-sm btn-danger destroy(@bookfind)",method: :delete, "data-confirm" => "本当に削除しますか？" %>
+         <%= link_to "Destroy", book_path(@bookfind), class:"btn-sm btn-danger destroy(@bookfind)",method: :delete, "data-confirm" => "本当に削除しますか？" %>
          <% end %>
         </td>
       </tr>
