--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -27,12 +27,11 @@
             
             <div class="form_group">
               <label for= "user introducthion">Introduction</label>
-              <%= f.text_field :introducthion, autofocus: true, id:"inputIntroduction", placeholder:"自己紹介"%>
+              <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction", placeholder:"自己紹介"%>
             </div>
-            <!--自己紹介のみ反映されていないが名前の変更は-->
             
             <div class="form_group">
-              <%= f.submit "Update User" %>
+              <%= f.submit "Update User" , class: "btn btn-secondary" %>
             </div>
           <% end %>
         </div>
