--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <main>
   <p id="notice"></p>
-  <div class='container px-5 px-0'>
+  <div class="container px-5 px-sm-0">
     <div class='row'>
       <div class='col-md-3'>
  <% if @book.errors.any? %>
@@ -12,14 +12,12 @@
   </ul>
 <% end %>
 
-<div>
  <%= render 'users/user-info', user: @user %>
  <!--< %= render 'new', book: @book %>-->
  <%= render 'new', books: @book %>
 </div>
-</div>
 
-<div class='col-8 offset-md-1'>
+<div class='col-md-8 offset-md-1'>
  <h2>Books</h2>
  <table class='table table-hover table-inverse'>
    <thead>
