--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,6 @@
 
   <body>
     <header>
-      <!--< % if user_signed_in? %>-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/"><span>Bookers</span></a>
@@ -24,42 +23,56 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              
+
               <% if user_signed_in? %>
-              
+
               <li>
-                <%= link_to 'Home', user_path(current_user.id) , class: "fa-solid fa-house-chimney" %>
+                <%= link_to user_path(current_user.id) do %>
+                <i class= "fas fa-home"></i> Home
+                <% end %>
               </li>
 
               <li>
-                <!--<i class="fa-solid fa-users"></i>-->
-                <%= link_to 'Users', users_path , class: "fa-solid fa-users" %>
-                
+                <%= link_to users_path do %>
+                <i class= "fas fa-users"></i> Users
+                <% end %>
               </li>
 
               <li>
-                <%= link_to 'Books' , books_path , class: "fa-solid fa-book-open" %>
+                <%= link_to books_path do %>
+                <i class= "fas fa-book-open"></i> Books
+                <% end %>
               </li>
 
               <li>
-                <%= link_to "Log out", destroy_user_session_path, method: :delete , class: "fa-solid fa-right-from-bracket" %>
+                <%= link_to destroy_user_session_path, method: :delete do %>
+                <i class= "fas fa-sign-out-alt"></i> Log out
+                <% end %>
               </li>
               <% else %>
 
               <li>
-                <%= link_to "Home", root_path , class: "fa-solid fa-house-chimney" %>
+                <%= link_to root_path do %>
+                <i class="fas fa-home"></i> Home
+                <% end %>
               </li>
 
               <li>
-                <%= link_to  "About", about_path , class: "fa-solid fa-link" %>
+                <%= link_to about_path do %>
+                <i class= "fas fa-link"></i>About
+                <% end %>
               </li>
 
               <li>
-                <%= link_to "  Sign up", new_user_registration_path , class: "fa-solid fa-user-plus" %>
+                <%= link_to new_user_registration_path do %>
+                <i class="fas fa-user-plus"></i> Sign up
+                <% end %>
               </li>
 
               <li>
-                <%= link_to "  Log in", new_user_session_path , class: "fa-solid fa-arrow-right-to-bracket"%>
+                <%= link_to new_user_session_path do %>
+                <i class="fas fa-sign-in-alt"></i> Log in
+                <% end %>
               </li>
               <% end %>
 
