--- a/app/views/users/_user-info.html.erb
+++ b/app/views/users/_user-info.html.erb
@@ -15,8 +15,8 @@
 　  </tr>
 　</table>
 　<div class = "row">
-　  <%= link_to edit_user_path(user), class:"btn btn-outline-secondary" do %>
-　    <i class="fa-solid fa-user-gear"></i>
+　  <%= link_to edit_user_path(user), class:"btn btn-outline-secondary btn-block" do %>
+　    <i class="fas fa-user-cog"></i>
 　    <% end %>
 　  </div>
 
