--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -18,7 +18,7 @@
 
     <div class="btn-wrapper col-10 mx-auto">
       <div class="row">
-        <%= link_to 'Log in', new_user_session_path, class:'btn btn-info btn-block' %>
+        <%= link_to 'Log in', new_user_session_path, class:'btn btn-info btn-block mb-3' %>
       </div>
 
       <div class="row">
